<?xml version="1.0"?>
<package format="2">
  <name>youbot_ad_sim</name>
  <version>0.1.0</version>
  <description>Meta package of packages to provide an ad playground for the KUKA youBot</description>
>
  <!-- Only related to this metapackage -->
  <author email="cepastro@gmail.com">Thomas_Pittalis</author>
  <maintainer email="cepastro@gmail.com">Thomas_Pittalis</maintainer>

  <license>GPLv3</license>

  <url type="repository">https://github.com/Unoriginell/youbot_ad_sim</url>
  <url type="bugtracker">https://github.com/Unoriginell/youbot_ad_sim/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>youbot_description</exec_depend>
  <exec_depend>youbot_simulation</exec_depend>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage/>
  </export>
</package>
