<?xml version="1.0"?>
<package format="2">
  <name>youbot_ad_sim</name>
  <version>0.1.0</version>
  <description>Configuration package for autonomous driving with KUKA youbot</description>
>
  <!-- Only related to this metapackage -->
  <author email="cepastro@gmail.com">Thomas_Pittalis</author>
  <maintainer email="cepastro@gmail.com">Thomas_Pittalis</maintainer>

  <license>GPLv3</license>

  <url type="repository">https://github.com/Unoriginell/youbot_ad_sim</url>
  <url type="bugtracker">https://github.com/Unoriginell/youbot_ad_sim/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

</package>
